--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "url": "git+https://github.com/Conosaurus/Conosaurus.git"
   },
   "version": "0.0.0",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
+    "build": "webpack --mode production",
     "setup:database": "node --no-warnings ./scripts/setup-database.js",
     "start": "node ./src/app.js",
     "start:watch": "npm-watch start"
@@ -29,7 +30,9 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "npm-watch": "^0.6.0"
+    "npm-watch": "^0.6.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "watch": {
     "start": {
@@ -41,5 +44,17 @@
       ],
       "quiet": true
     }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.0.6",
+    "cross-env": "^7.0.2",
+    "html-loader": "^1.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   }
 }
